mudança de nome

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./project.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Project 01</title>
     <style>
         @media screen and (max-width: 730px) {
@@ -45,7 +45,7 @@
             <div class="resultados"></div>
         </section>
     </div>
-    <script src="./project1 .js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
