Inserindo novas possibilidades

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Project 01</title>
+    <!-- @yangomes010 -->
+    <title>Analise de numeros</title>
     <style>
         @media screen and (max-width: 730px) {
             section {
@@ -27,6 +28,7 @@
             }
             #select {
                 width: 150px;
+                padding: 6px;
             }
             #adicionar {
                 display: block;
@@ -39,14 +41,15 @@
         }
     </style>
 </head>
+<!-- @yangomes010 -->
 
 <body>
     <div class="container">
         <section class="section">
             <h1>ANALISE DE NUMEROS</h1>
             <p>
-                Número de 0 a 9:
-                <input type="number" id="numeros" max="9" min="1" placeholder="Digite um número">
+                Número de 1 a 100:
+                <input type="number" id="numeros" max="100" min="1" placeholder="Digite um número">
                 <input type="submit" value="Adicionar" id="adicionar">
             </p>
             <select name="select" id="select" size="10">
@@ -55,6 +58,7 @@
             <div class="resultados"></div>
         </section>
     </div>
+    <!-- @yangomes010 -->
     <script src="./script.js"></script>
 </body>
 
